# humeina-unit

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  README.md  pyproject.toml  test_exvoice.py  test_exvoice_full.py
assets/: README.md
config/: default.yaml  math_dict.yaml  scene_params.yaml  voices.yaml
config/voice_profiles/: nurse-robot-type-t.yaml
config/voicevox_profiles/: nurse-robot-type-t.yaml
docs/: api-reference.md  architecture.md  batch-pipeline.md  cli-reference.md  configuration.md  installation.md  nlp-pipeline.md  tts-providers.md  virtiofs-setup.md
src/yomiage/: __init__.py  cli.py  config.py  server.py
src/yomiage/api/: __init__.py  analyzer.py  audio_format.py  bridge.py  config.py  exceptions.py  hooks.py  long_text.py  metrics.py  models.py  pipeline.py  profile_resolver.py
src/yomiage/batch/: __init__.py  analyzer.py  concatenator.py  engine.py  job_manager.py  manifest.py  (+4 more)
tests/: test_api_analyzer.py  test_api_bridge.py  test_api_pipeline.py  test_bridge_hooks.py  test_character_db.py  test_classifier.py  test_generic_web.py  test_hooks.py  test_llm_backend.py  test_math_processor.py  test_metrics.py  test_server_batch.py  test_server_metrics.py  test_sources.py  test_speaker.py  test_splitter.py  test_studio_cache.py  test_studio_engine.py  test_studio_naming.py  test_studio_parser.py  test_text_processor.py  test_video.py  test_video_integration.py  test_video_phase234.py  test_video_soms.py  test_voice_profile.py  test_voicepeak_profile.py  test_voicevox_profile.py
tests/e2e/: conftest.py  test_real_stack.py
(+66 files in other folders)
